--- a/index.html
+++ b/index.html
@@ -600,10 +600,10 @@
                   DarkSurfer-Extension
                 </h3>
                 <p class="portfolio__description">
-                  DarkSurfer-Extension, is a project based on the application of advanced Language Models LMs to detect and eliminate dark patterns on websites. It aims to improve user-awareness, exposing real-time of devious design practices in situ. It helps make the internet more user-friendly by using its novel LMs and popular LM-based models, such as RoBERTa, BERT, and XLNet.
+                  AI-Powered-Code-Reviewer, is a project based on the AI of code reviewer that is optimize your code and finding the mistakes on this code and provide better ways to represent this code.
                 </p>
                 <a
-                  href="https://github.com/Venkateeshh/DarkSurfer-Extension"
+                  href="https://github.com/Sourav5597/AI-Powered-Code-Reviewer"
                   class="button button--flex button--small portfolio__button"
                 >
                   GitHub Repository
